Tests/Core/AWSClientRuntimeTests/Protocols/RestXML/Models/Errors/ComplexXMLError.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//

// Code generated by smithy-swift-codegen. DO NOT EDIT!
import AWSClientRuntime
import ClientRuntime

public struct ComplexXMLError: AWSServiceError, HTTPError {
    public var typeName: String?
    public var message: String?
    public var requestID: String?
    public var header: String?
    public var nested: ComplexXMLNestedErrorData?
    public var topLevel: String?
    public var httpResponse = HttpResponse()

    public init (
        header: String? = nil,
        nested: ComplexXMLNestedErrorData? = nil,
        topLevel: String? = nil
    )
    {
        self.header = header
        self.nested = nested
        self.topLevel = topLevel
    }
}
